# nise

./: BuildInstructions.md  CHANGELOG  ProjectHome.md  researchquickstart.md  run.sh
common/: CMakeLists.txt  io.h  nise.cpp
extract/: extractor.h  sift-wrapper.cpp
fbi/: eval.h  fbi-run.cpp  fbi-shuffle.cpp  fbi-trie.cpp  fbi-verify.cpp  fbi.h  manku-run.cpp  manku.h
html/: index-cn.html  jquery.form.js  jquery.jcrop.css  jquery.jcrop.nise.js  nise.js
image/: CMakeLists.txt  extractor.cpp  jpeg.cpp  sift-wrapper.cpp
index/: cluster.cpp  cluster2id.cpp  download.cpp  group-index.cpp  group.cpp  import-id.cpp  import.cpp  merge.cpp  number.cpp  sketch-index.cpp
java/: build.xml
java/nise/: Download.java  IdentityMapper.java
java/nutch-1.0-compat/: Makefile
java/nutch-1.0-compat/nise/: ExtractNutch.java
script/: README  example.sh
server/: CMakeLists.txt  page.h  server.h
test/: print-container.cpp
tools/: CMakeLists.txt
trunk/: CMakeLists.txt  README  setup.sh
trunk/common/: CMakeLists.txt  nise.h
trunk/doc/: simigle.ppt
trunk/expr/: sim.cpp
trunk/extract/: Makefile  extract.cpp  extract.h
trunk/fbi/: Makefile  char_bit_cnt.inc  fbi-sample.cpp
trunk/html/: index.html  nise.css  nise.js
trunk/image/: extractor.h  image.cpp  image.h
trunk/index/: CMakeLists.txt  graph-hash.cpp  graph-index.cpp  graph-join.cpp  hadoop.h  import-nutch.cpp  mapid.cpp
trunk/java/nise/: BinaryOutputFormat.java  BinaryOutputFormatDeprecated.java  IdentityReducer.java  Import.java  Number.java
trunk/java/nutch-1.0-compat/: build.xml
trunk/script/: jsawk.js
trunk/server/: expand.h  json.h  server.cpp  server.h
trunk/test/: print-graph.cpp  print-record.cpp  print-sketch.cpp
trunk/tools/: client.cpp  extract.cpp
wiki/: BuildInstructions.wiki  researchquickstart.wiki
