CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(NISE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${NISE_SOURCE_DIR}/cmake) 

SET(CMAKE_INCLUDE_PATH ${NISE_SOURCE_DIR}/../nise-tools/include)
SET(CMAKE_LIBRARY_PATH ${NISE_SOURCE_DIR}/../nise-tools/lib64 ${NISE_SOURCE_DIR}/../nise-tools/lib)

#SET(CMAKE_CXX_FLAGS "-std=c++0x -g -s")
SET(CMAKE_CXX_FLAGS_DEBUG "-std=c++0x -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -O3 -s")
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g -static")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "-static -s")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${NISE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${NISE_BINARY_DIR}/bin)
SET(CMAKE_DEBUG_POSTFIX -d)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(Boost_USE_STATIC_LIBS ON)

SET(FBI_INCLUDE_DIR ${NISE_SOURCE_DIR}/../fbi)
SET(LSHKIT_INCLUDE_DIR ${NISE_SOURCE_DIR}/../lshkit/include)

INCLUDE_DIRECTORIES(${NISE_SOURCE_DIR} ${FBI_INCLUDE_DIR} ${LSHKIT_INCLUDE_DIR})

SET(DEFAULT_LIBRARIES	nise-image nise-common
			boost_program_options
			PocoUtil PocoXML PocoNet PocoFoundation
			jpeg png gif
			hadooppipes hadooputils
			z rt m gomp pthread
		)

ADD_SUBDIRECTORY("common")
ADD_SUBDIRECTORY("image")
ADD_SUBDIRECTORY("index")
ADD_SUBDIRECTORY("server")
ADD_SUBDIRECTORY("tools")
ADD_SUBDIRECTORY("expr")

