CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(NISE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${NISE_SOURCE_DIR}/cmake) 

SET(CMAKE_INCLUDE_PATH /usr/local/include)
SET(CMAKE_LIBRARY_PATH /usr/local/lib)

SET(CMAKE_CXX_FLAGS_DEBUG "-std=c++0x -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-L/usr/local/lib -std=c++0x -O3 -g")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${NISE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${NISE_BINARY_DIR}/bin)
SET(CMAKE_DEBUG_POSTFIX -d)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(Boost_USE_STATIC_LIBS ON)

SET(LSHKIT_INCLUDE_DIR ${NISE_SOURCE_DIR}/../lshkit/include)
SET(FBI_INCLUDE_DIR ${NISE_SOURCE_DIR}/fbi)

INCLUDE_DIRECTORIES(${NISE_SOURCE_DIR} ${FBI_INCLUDE_DIR} ${LSHKIT_INCLUDE_DIR})

SET(DEFAULT_LIBRARIES	nise-image nise-common
			boost_program_options
			PocoUtil PocoXML PocoNet PocoFoundation
			jpeg png gif
			hadooppipes hadooputils
			z rt m gomp pthread
		)

ADD_SUBDIRECTORY("common")
ADD_SUBDIRECTORY("image")
ADD_SUBDIRECTORY("index")
ADD_SUBDIRECTORY("server")
ADD_SUBDIRECTORY("tools")
ADD_SUBDIRECTORY("expr")

